# http-mitm-proxy

./: CLAUDE.md  Cargo.toml  README.md  README.md.php  makefile
.github/workflows/: rust.yml
examples/: dev_proxy.rs  https.rs  proxy.rs  reqwest_proxy.rs  websocket.rs
src/: default_client.rs  lib.rs  parse.rs  request.rs  reqwest_client.rs  tls.rs
src/parse/: mod.rs  request.rs  response.rs
tests/: http.rs  test.rs
