[package]
name = "http-mitm-proxy"
version = "0.7.0"
description = "A HTTP proxy server library intended to be a backend of application like Burp proxy."
readme = "README.md"
repository = "https://github.com/hatoo/http-mitm-proxy"
edition = "2021"

authors = ["hatoo <hato2000@gmail.com>"]
license = "MIT"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "proxy", "http-proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "io-util",
    "net",
] }
hyper = { version = "1.0.1", features = ["http1", "http2", "server", "client"] }
futures = "0.3.29"
bytes = "1.5.0"
http-body-util = "0.1.0"
pin-project-lite = "0.2.13"
rcgen = "0.13.1"
rustls = "0.23.3"
tokio-rustls = "0.26.0"
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
hyper-util = { version = "0.1.1", features = ["tokio"] }
native-tls = { version = "0.2.12", features = ["alpn"] }
anyhow = "1.0.86"
tracing-test = "0.2.5"

[dev-dependencies]
axum = { version = "0.7.2", features = ["http2"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.16", features = ["derive"] }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
reqwest = "0.12.3"
rustls21 = { package = "rustls", version = "0.21" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
