[package]
name = "http-mitm-proxy"
version = "0.11.0"
description = "A HTTP proxy server library intended to be a backend of application like Burp proxy."
readme = "README.md"
repository = "https://github.com/hatoo/http-mitm-proxy"
edition = "2021"

authors = ["hatoo <hato2000@gmail.com>"]
license = "MIT"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "proxy", "http-proxy"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "io-util",
    "net",
] }
hyper = { version = "1.0.1", features = ["http1", "http2", "server", "client"] }
futures = "0.3.29"
bytes = "1.7.1"
http-body-util = "0.1.0"
rcgen = "0.13.1"
rustls = "0.23.18"
tokio-rustls = "0.26.0"
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
hyper-util = { version = "0.1.7", features = ["tokio"] }
native-tls = { version = "0.2.12", features = ["alpn"] }
thiserror = "2.0.3"
moka = { version = "0.12.8", features = ["sync"] }

[dev-dependencies]
axum = { version = "0.7.2", features = ["http2"] }
clap = { version = "4.5.16", features = ["derive"] }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
reqwest = { version = "0.12.7", features = ["native-tls-alpn"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winnow = "0.6.20"
